# symphony-thumbtack

./: .gitignore  README.md  SETUP.md  WORKFLOW.md  config.env.example  pyproject.toml
.claude/skills/commit/: SKILL.md
.claude/skills/land/: SKILL.md
.claude/skills/linear/: SKILL.md
.claude/skills/pull/: SKILL.md
.claude/skills/push/: SKILL.md
promatch.template/: .gitignore  README.md  pyproject.toml
promatch.template/promatch/: __init__.py  matching.py  seed.py
promatch/promatch/: cli.py  db.py
promatch/tests/: test_cli.py
scripts/: bootstrap.sh  reset-demo.sh  run.sh  seed-linear.py  tail.sh  watch-agents.sh
symphony/: __init__.py  __main__.py  agent.py  agent_claude.py  cli.py  config.py  domain.py  dotenv.py  errors.py  hooks.py  logger.py  orchestrator.py  prompt.py  tracker.py  watcher.py  workflow.py  workspace.py
